# project-antipatterns

./: .gitignore  README  README.md  collect-errors.py  combine-databases.py  decode_escapes.py  enrich-database.py  fake-collect-errors.py  match_errors.py  pyproject.toml  simple_error_messages.py  top-first-messages-with-percentages.sql  top-first-messages.sql  top-messages.sql
blackbox_mini/: __init__.py
error_database/: __init__.py
java_error_messages/: __init__.py  message_patterns.py  simple_error_messages.py  test_message_patterns.py  test_module.py
