[tool.poetry]
name = "blackbox-mini-error-analysis"
version = "0.1.0"
description = ""
authors = ["Eddie Antonio Santos <eddie.santos@ucdconnect.ie>"]
license = "MIT"
readme = "README.md"
packages = [{include = "blackbox_mini_error_analysis"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
mypy = "^0.981"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
