[tool.poetry]
name = "project_antipatterns"
version = "0.1.0"
description = "Data collection and analysis for Project Anti-patterns"
authors = ["Eddie Antonio Santos <eddie.santos@ucdconnect.ie>"]
license = "MIT"
readme = "README.md"
packages = [{include = "java_error_messages"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
mypy = "^0.981"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
